# metagen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
configs/: README.md
configs/analyze/run/: eval_reasoning_dlc_dpsk_r1_distill_qwen_1p5b.yaml  eval_reasoning_dlc_qwen2p5_32b_ppo_rewards.yaml
configs/datasets/: aime_2024.yaml  math_500.yaml  mmlu_pro_1k.yaml  theorem_qa.yaml
configs/jobs/: eval_reasoning_dlc.yaml
configs/metagen-job/: dpsk-r1-distill-qwen-1.5b-reasoning.yaml
configs/metagen/common/datasets/: aime_2024.yaml  aime_2025_1.yaml  aime_2025_2.yaml  beyond_aime.yaml  math_500.yaml  mmlu_pro_1k.yaml  theorem_qa.yaml
configs/metagen/common/jobs/: eval_reasoning_dlc.yaml
configs/metagen/common/messages/: cot_boxed_qa.yaml
configs/metagen/run/: dpsk_r1_distill_qwen_1.5b_eval_reasoning_dlc.yaml  eval_reasoning_dlc.yaml
configs/run/: dpsk_r1_distill_qwen_1.5b_eval_reasoning_dlc.yaml
configs/run-verify/: eval_reasoning_dlc.yaml
configs/stages/: qa.yaml
configs/verify/run/: eval_reasoning_dlc.yaml
data/datasets/: aime-2024.jsonl
notebooks/: downsample-mmlu-pro.ipynb
scripts/: launch_dp_server.sh  metagen_w_verl_ckpt.sh  test_client_health_check.py  test_jinja_template_in_yaml.py  test_math_verify.py
scripts/analyze/: analyze_eval_reasoning_dlc_qwen2p5_32b_ppo_rewards.py
scripts/prepare-datasets/: prepare_aime_datasets.sh  prepare_dlc_datasets.sh
scripts/tests/: test_tokenizer.py
src/metagen/: data.py  io.py
src/metagen/cli/: analyze.py  metagen.py  run_metagen.py  run_metagen_job.py  run_verify.py  verify.py
