[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metagen"
version = "0.0.1"
dependencies = [
    "hydra-core", # NOTE: not "hydra"!
    "omegaconf",
    "datasets",
    "transformers",
    "openai",
    "jinja2",
    "uvloop",
    "orjson",
    "tqdm",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.3",
    "mypy==1.15.0",
    "pre-commit",
    "types-tqdm",
    "types-PyYAML",
]

verify = [
    "math-verify[antlr4_9_3]" # Compatible with hydra-core
]

notebook = [
    "notebook",
    "ipywidgets",
]

viz = [
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}
