[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metagen"
version = "0.0.1"
dependencies = [
    "hydra-core", # NOTE: not "hydra"!
    "omegaconf",
    "datasets",
    "transformers",
    "openai",
    "jinja2",
    "uvloop",
    "orjson",
    "tqdm",
    "pandas",
]

[project.optional-dependencies]

verify = [
    "math-verify[antlr4_9_3]", # Compatible with hydra-core
    "pebble", # TODO: Any more lightweight workaround for sympy timeout?
]

analyze = [
    "matplotlib",
    "tabulate",
]

notebook = [
    "notebook",
    "ipywidgets",
]

dev = [
    "ruff==0.11.3",
    "mypy==1.15.0",
    "pre-commit",
    "pandas-stubs",
    "types-tqdm",
    "types-PyYAML",
]

[tool.setuptools]
package-dir = {"" = "src"}
